feat: remove OPENAI_COMPATIBLE enum and consolidate with OpenAI protocol
Removed the OPENAI_COMPATIBLE enum value from AIProtocol as it's redundant with OpenAI.
Added protocol mapping in AdpAIGatewayOperator to handle OPENAI_COMPATIBLE strings
by converting them to OpenAI/V1 format. Updated OpenAILlmService to return only
AIProtocol.OPENAI instead of both OPENAI and OPENAI_COMPATIBLE since they represent
the same underlying protocol.